--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
                 <hr>
                 <div id="main">
                     <img id="imgMain" src="assets\images\james_profile.JPG" alt="james">
-                    <p> James is a University of Minnesota College of Libral arts graduate. For the past 7 years he has served in various client facing rolls.
-                                                <br> James has served mainly as a stratagist in with SEO and digital being his primary focus.
+                    <p> James is a University of Minnesota College of Libral arts graduate. For the past 6 years he has served in various client facing rolls within the digital advertising community.
+                
+                        <br> 
+                        As you can see in the picture James enjoys corn along with thrifting for video games. He developed a passion for web development and has sought to learn the various disciplines to effectively help businesses drive bottom line revenue.
                         <br>
                         <br>
                         Follow the link to <a style="color: #4aaaa5" href=https://www.linkedin.com/in/jamescaples/> my linkedIn profile</a> to learn more about my past professional experience and why I'd be a great fit for your next project.
@@ -40,7 +42,7 @@
    
    <div>       <div class="push"></div>
     </div>
-    <footer class="footer"></footer>
+    <footer class="footer">Copywright</footer>
 </div>
 
 
